# funpar-t2-22-project-house

./: Cargo.toml  README.md
.github/workflows/: bulid.yml
src/: cli.rs  compare_image.rs  edge_detection.rs  main.rs  place_shape.rs
