[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.8"
clap_derive = "4.1.8"
deltae = "0.3.0"
edge-detection = "0.2.6"
image = "0.24.5"
lab = "0.11.0"
rand = "0.8.5"
rayon = "1.7.0"
show-image = "0.13.1"
